kub/jokes/jokes_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jokes-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "jokes.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jokes-app-service
            port:
              number: 9091
